/* Nama File : Pajak.java
  Deskripsi : Interface Pajak merupakan interface yang merepresentasikan pajak yang harus dibayar oleh suatu objek.
  Pembuat   : Sulhan Fuadi (24060123130115)
  Tanggal   : 20 Maret 2025
*/

public interface Pajak {
  double hitungPajak();
}
